--- a/contingut/css/styles.css
+++ b/contingut/css/styles.css
@@ -5,6 +5,8 @@ body {
     min-height: 100vh;
     margin: 0;
     font-family: sans-serif;
+    color: #000000;
+    background-color: #ffffff;
 }
 a {
     color: #793a07;
