--- a/contingut/css/styles.css
+++ b/contingut/css/styles.css
@@ -1,13 +1,39 @@
 
+/* ==========================================================================
+   Web dels Renoms de Matadepera
+   ==========================================================================
+
+   Creació i disseny:  Marc Sellarès Genescà
+   Funcionament:       Web estàtica (HTML, CSS, JavaScript)
+   Data:               2025
+   Llicència:          Creative Commons Reconeixement - Sense Obres Derivades 
+                       4.0 Internacional (CC BY-ND 4.0)
+                       https://creativecommons.org/licenses/by-nd/4.0/
+
+   Descripció:
+   Aquest full d’estils defineix l’aparença general del lloc web 
+   “Renoms de Matadepera”. Inclou estructura responsive, 
+   estils tipogràfics i colors, navegació, taules i panells informatius.
+   ========================================================================== */
+
+/* Evita la inversió automàtica del navegador */
+:root, html, body {
+  color-scheme: light;
+}
+header, .navbar, main, .info-panel, footer {
+  color-scheme: light;
+}
+
 body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
     margin: 0;
     font-family: sans-serif;
-    color: #000000;
-    background-color: #ffffff;
+    color: #000;
+    background-color: #fff;
 }
+
 a {
     color: #793a07;
     text-decoration: none;
@@ -108,6 +134,8 @@ main {
     padding: 1em;
     width: 100%;
     box-sizing: border-box;
+    color: #000;
+    background-color: #fff;
 }
 .titol-mob {
     display: none;
